--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -12,27 +12,12 @@ block title
 	- let  title= 'title'
 	title= title
 block pagecontent
-
-
 	+mob-mnu()
 	+header()
 	+top-nav()
 	+soc()
-	a(href="#modal-call").link-modal-js фывфывфыв
-	//- img(src="img/", alt="")
-	//- img(src="img/@2x/avif/r.avif", alt="")
-	//- img(src="img/@1x/avif/r.avif", alt="")
-	+in-c("checkbox", "text")
-	//- +pic('f8af7db0d56028b5cc1c7dfc78ec06e8.jpg')
-	//- img(src="img/r.avif", alt="")
-	img(src="img/@2x/r.jpg", alt="")
-
-	img(src="img/@2x/webp/r.webp", alt="")
-	//- img(src="img/002-book.avif", alt="")
-	img(src="img/@2x/002-book.png", alt="")
-	img(src="img/@2x/webp/002-book.webp", alt="")
-
-	+b.tabs--js
+	a(href="#modal-call").link-modal-js фывфывфы
+	//-+b.tabs--js
 		+e.caption.d-flex
 			+e.btn.btn.btn-success.active  btn  2 1
 			+e.btn.btn.btn-success btn 2  2
@@ -48,13 +33,8 @@ block pagecontent
 			+e.content content 2
 			+e.content content 3
 			+e.content content 4
-
 	+topLine()
 	+headerBlock()
 	+sForm()
 	+sContact()
 	+footer()
-      
-
-
-
