--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -1,61 +1,69 @@
 .top-nav {
-	position: sticky; 
-	left: 0;
-	// left: 200px;
-	// right: -200px;
-	// margin-right: -200px;
-	top: 0;
-	left: 0;
-	z-index: 800;
-	background-color: #fff;
-	border-bottom: 1px solid #000; 
-	--color-link: 255,
-	0,
-	0;
-	background-color: #{rgba(var(--color-link), .5)};
-	&.fixed { 
-		bottom: auto;
-		margin-top: 0;
-	}
-	.row{
-	 
-	}
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: rem(35) 0;
 
-	// 
-	@include media-breakpoint-up(xl) {}
+  &__container{
+    @include media-breakpoint-up(xxl){
+      position: relative;
+      left: -5px;
+    }
+  }
 
-	@include media-breakpoint-up(lg) {}
+  &__row{
+    --bs-gutter-x: #{rem(24)};
+  }
+  &__logo{
+    @include media-breakpoint-up(xxl){
+      position: relative;
+      top: 3px;
+    }
+    display: block;
+    width: rem(121);
 
-	@include media-breakpoint-up(md) {}
+    img{
+      width: auto;
+      max-width: 100%;
+    }
+  }
+  &__tell{
+    text-decoration: none;
+    font-weight: bold;
+    font-size: rem(24);
+    line-height: (29/24);
 
-	@include media-breakpoint-up(sm) {}
+    letter-spacing: rem(0.3);
+    color: $body-color;
+  }
+  &__soc-row{
+    --bs-gutter-x: #{rem(16)};
 
-	@include media-breakpoint-up(xs) {}
+    //@include media-breakpoint-up(xxl){
+    //  margin-right: 2px;
+    //}
+  }
+  &__soc{
+    width: rem(24);
+    height: rem(24);
 
-	// 
-	@include media-breakpoint-between(md, xl) {}
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-	// 
-	@include media-breakpoint-only(xs) {}
-
-	@include media-breakpoint-only(sm) {}
-
-	@include media-breakpoint-only(md) {}
-
-	@include media-breakpoint-only(lg) {}
-
-	@include media-breakpoint-only(xl) {}
-
-	// 
-	@include media-breakpoint-down(xl) {}
-
-	@include media-breakpoint-down(lg) {}
-
-	@include media-breakpoint-down(md) {}
-
-	@include media-breakpoint-down(sm) {}
-
-	@include media-breakpoint-down(xs) {}
+    img{
+      width: auto;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+  &__{}
+  &__{}
+  &__{}
+  &__{}
 }
 
 
