--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -1,9 +1,10 @@
 mixin allcss()
-	
 	//- link(rel="stylesheet", href="libs/Easy-Responsive-Tab-Accordion-Control-Plugin-For-jQuery/easy-responsive-tabs.css")
- 
 	//- link(href="libs/swiper/css/swiper.min.css", rel="stylesheet") 
 	//- link(href="libs/@fancyapps/fancybox/jquery.fancybox.min.css", rel="stylesheet")
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
 	link(href="css/main.min.css", rel="stylesheet")
 
 mixin allcjs()
