--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -5,35 +5,11 @@
 	fill: currentColor;
 }
 
-.icon-basket {
-	font-size:(24/10)*1rem;
-	width:(22/24)*1em;
-}
 .icon-check {
-	font-size:(27/10)*1rem;
-	width:(27/27)*1em;
+	font-size:(13/10)*1rem;
+	width:(19/13)*1em;
 }
-.icon-fb {
-	font-size:(24/10)*1rem;
-	width:(24/24)*1em;
-}
-.icon-instagram {
-	font-size:(24/10)*1rem;
-	width:(24/24)*1em;
-}
-.icon-telegram {
-	font-size:(16/10)*1rem;
-	width:(16/16)*1em;
-}
-.icon-viber {
-	font-size:(16/10)*1rem;
-	width:(16/16)*1em;
-}
-.icon-vk {
-	font-size:(24/10)*1rem;
-	width:(24/24)*1em;
-}
-.icon-whatsapp {
-	font-size:(16/10)*1rem;
-	width:(16/16)*1em;
+.icon-infinity {
+	font-size:(10/10)*1rem;
+	width:(18/10)*1em;
 }
