--- a/sourse/pug/blocks/sCheck/_sCheck.pug
+++ b/sourse/pug/blocks/sCheck/_sCheck.pug
@@ -1,6 +1,6 @@
 mixin sCheck(data)
 	// start sCheck
-	+b.SECTION.sCheck.section#sCheck&attributes(attributes)
+	+b.sCheck.section#sCheck&attributes(attributes)
 		+e.container.container
 			+e.row.row
 				+sCheckItem(`Кроссплатформенность`, `Работа на любых устройствах под управлением Windows, iOS, <br> Android`)
