--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -16,7 +16,7 @@ mixin sForm()
 			+form-wrap()
 				+e.inputs
 					+input('Ваше имя', 'text')
-					+input('Номер телефона', 'rel')
+					+input('Номер телефона', 'tel')
 					+input('Ваш e-mail', 'email')
 					+input('Удобное время для звонка', 'text')
 				+e.btn-cont.text-center.text-sm-start
